# RiskAssessor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEEDBACK.md  GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKREF.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  ci.yml  risk-assessment.yml
.risk_assessor/: feedback.json
deployments/kubernetes/: README.md  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  job.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
deployments/serverless/aws-lambda/: README.md  handler.py  serverless.yml
deployments/serverless/azure-functions/: README.md  function_app.py  requirements.txt
deployments/serverless/google-cloud-functions/: README.md  (+2 more)
examples/: README.md  config.yaml  example_contract.py  example_feedback.py  example_risk_contract.json  example_usage.py  regional_config_examples.md  regional_validation_demo.py
risk_assessor/: __init__.py  cli.py
risk_assessor/analyzers/: __init__.py  complexity.py  llm_analyzer.py  regional_validator.py
risk_assessor/core/: __init__.py  contracts.py  feedback.py  issue_catalog.py  regional_info.py  risk_engine.py
risk_assessor/integrations/: github_client.py  jira_client.py
risk_assessor/utils/: config.py
scripts/: build-docker.sh  deploy-k8s.sh  deploy-lambda.sh
tests/: test_basic.py  test_contract_integration.py  test_contracts.py  test_deployment.py  test_feedback.py  test_regional_integration.py  test_regional_validation.py
